--- a/index.html
+++ b/index.html
@@ -4,9 +4,82 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <title>landing Page</title>
 </head>
 <body>
+    <div class="header-div">
+        <header class="header">
+            <h1 class="header-brand">CryptoDogz </h1>
+            <div class="header-links-div">
+                <a class="header-links" href=""><h4>Home</h4></a>
+                <a class="header-links" href=""><h4>About</h4></a>
+                <a class="header-links" href=""><h4>Contact</h4></a>
+            </div>
+        </header>
+    </div>
     
+
+    <main class="hero-div">
+        <article class="first-section">
+            <div class="landing-left-section">
+                <h1 class="hero-text">The very first real AI NFT dog collection</h1>
+                <br>
+                <p class="hero-secondary-text">This website has some subtext that goes here under the main title. I am so cool CryptoDogz</p>
+                <button class="hero-button">Sign Up</button>
+            </div>
+            <img class="hero-img" src="https://images.unsplash.com/photo-1601132359864-c974e79890ac?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80">
+        </article>
+    </main>
+
+    <article class="information-div">
+        <article class="second-section">
+            <h1 class="information-header">Some random Information</h1>
+            <div class="information-card-div">
+                <div class="information-card">
+                    <img class="information-img" src="https://images.unsplash.com/photo-1580835239846-5bb9ce03c8c3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=736&q=80">
+                    <p class="information-card-info">This is some subtext under an illustration or image. This is so cool!</p>
+                </div>
+                <div class="information-card">
+                    <img class="information-img" src="https://images.unsplash.com/photo-1555255707-c07966088b7b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1332&q=80">
+                    <p class="information-card-info">This is some subtext under an illustration or image</p>
+                </div>
+                <div class="information-card">
+                    <img class="information-img" src="https://images.unsplash.com/photo-1485827404703-89b55fcc595e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80">
+                    <p class="information-card-info">This is some subtext under an illustration or image</p>
+                </div>
+                <div class="information-card">
+                    <img class="information-img" src="https://images.unsplash.com/photo-1563209259-b2fa97148ce1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1062&q=80">
+                    <p class="information-card-info">This is some subtext under an illustration or image</p>
+                </div>
+            </div>
+        </article>
+    </article>
+    <article class="quote-div">
+        <article class="third-section">
+            <h3 class="quote-quote">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem perspiciatis aliquam voluptates cum deserunt ipsum commodi omnis explicabo molestias excepturi? Perspiciatis sapiente non commodi! Ad corrupti necessitatibus eius nam quos.</h3>
+            <h3 class="quote-author"><bold>-Thor, God of Thunder</bold></h3>
+        </article>
+    </article>
+
+    <article class="contact-div">
+        <article class="fourth-section">
+            <div class="contact-content-div">
+                <div>
+                    <h2 class="contact-main">Call to action! It's time!</h2>
+                    <p>Sign up for our product by clicking that button right over there!</p>
+                </div>
+                <button class="contact-button">Sign Up</button>
+            </div>
+        </article>
+    </article>
+
+    <footer>
+        <p>Copyright © The Odin Project 2021</p>
+    </footer>
+
 </body>
 </html>
